--- a/app/src/main/res/layout/data_layout.xml
+++ b/app/src/main/res/layout/data_layout.xml
@@ -58,6 +58,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-light"
                 android:gravity="start|center_vertical"
+                android:maxLines="4"
                 android:minHeight="50dp"
                 android:text="DATA NAME"
                 android:textColor="#2a363b"
