--- a/app/src/main/res/layout/data_layout.xml
+++ b/app/src/main/res/layout/data_layout.xml
@@ -9,32 +9,42 @@
         android:id="@+id/cardView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.cardview.widget.CardView
+        <LinearLayout
             android:id="@+id/titleView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="#a6dcef"
-            android:minHeight="50dp"
-            tools:layout_editor_absoluteX="-145dp"
-            tools:layout_editor_absoluteY="245dp">
+            android:background="#a6dcef"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:id="@+id/DropdownLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="right"
                 android:orientation="horizontal">
 
+                <TextView
+                    android:id="@+id/dataName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:fontFamily="sans-serif-light"
+                    android:gravity="start|center_vertical"
+                    android:maxLines="4"
+                    android:minHeight="50dp"
+                    android:text="DATA NAME"
+                    android:textColor="#2a363b"
+                    android:textSize="18sp" />
+
                 <Button
                     android:id="@+id/checkButton"
-                    android:layout_width="50dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="230dp"
-                    android:layout_weight="1"
+                    android:layout_width="110dp"
+                    android:layout_height="match_parent"
                     android:backgroundTint="#5C6BC0"
                     android:text="출석체크"
                     android:textColor="#FBE9E7"
@@ -52,19 +62,7 @@
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/dataName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-light"
-                android:gravity="start|center_vertical"
-                android:maxLines="4"
-                android:minHeight="50dp"
-                android:text="DATA NAME"
-                android:textColor="#2a363b"
-                android:textSize="18sp" />
-
-        </androidx.cardview.widget.CardView>
+        </LinearLayout>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/contentView"
@@ -84,8 +82,8 @@
                 android:fontFamily="sans-serif-light"
                 android:gravity="start|center_vertical"
                 android:text="CONTENTS"
-                android:textColor="#b80d57"
-                android:textSize="28sp" />
+                android:textColor="#2a363b"
+                android:textSize="18sp" />
 
             <LinearLayout
                 android:id="@+id/nestedLayout"
