--- a/app/src/main/res/layout/data_layout.xml
+++ b/app/src/main/res/layout/data_layout.xml
@@ -5,75 +5,71 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:id="@+id/cardView"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:id="@+id/titleView"
+            android:id="@+id/DropdownLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#a6dcef"
-            android:orientation="vertical">
+            android:background="#B39DDB"
+            android:gravity="right"
+            android:orientation="horizontal">
 
-            <LinearLayout
-                android:id="@+id/DropdownLayout"
+            <TextView
+                android:id="@+id/dataName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="right"
-                android:orientation="horizontal">
+                android:layout_weight="1"
+                android:fontFamily="sans-serif-light"
+                android:gravity="start|center_vertical"
+                android:minHeight="50dp"
+                android:text="DATA NAME"
+                android:textColor="#2a363b"
+                android:textSize="18sp" />
 
-                <TextView
-                    android:id="@+id/dataName"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:fontFamily="sans-serif-light"
-                    android:gravity="start|center_vertical"
-                    android:maxLines="4"
-                    android:minHeight="50dp"
-                    android:text="DATA NAME"
-                    android:textColor="#2a363b"
-                    android:textSize="18sp" />
+            <Button
+                android:id="@+id/checkButton"
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
+                android:backgroundTint="#5C6BC0"
+                android:text="출석체크"
+                android:textColor="#FBE9E7"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:visibility="invisible" />
 
-                <Button
-                    android:id="@+id/checkButton"
-                    android:layout_width="110dp"
-                    android:layout_height="match_parent"
-                    android:backgroundTint="#5C6BC0"
-                    android:text="출석체크"
-                    android:textColor="#FBE9E7"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:visibility="invisible" />
-
-                <ImageView
-                    android:id="@+id/dropdown"
-                    android:layout_width="60dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center|right|top"
-                    android:translationZ="100dp"
-                    app:srcCompat="@drawable/down_arrow" />
-
-            </LinearLayout>
+            <ImageView
+                android:id="@+id/dropdown"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center|right|top"
+                android:translationZ="100dp"
+                app:srcCompat="@drawable/down_arrow" />
 
         </LinearLayout>
 
-        <androidx.cardview.widget.CardView
+        <LinearLayout
             android:id="@+id/contentView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:backgroundTint="#a1eafb"
-            android:minHeight="50dp"
-            android:visibility="gone"
-            tools:layout_editor_absoluteX="-145dp"
-            tools:layout_editor_absoluteY="130dp">
+            android:layout_height="match_parent"
+            android:background="#9FA8DA"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <LinearLayout
+                android:id="@+id/nestedLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="gone"></LinearLayout>
 
             <TextView
                 android:id="@+id/data"
@@ -84,16 +80,8 @@
                 android:text="CONTENTS"
                 android:textColor="#2a363b"
                 android:textSize="18sp" />
+        </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/nestedLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:visibility="gone"></LinearLayout>
-
-        </androidx.cardview.widget.CardView>
-
-    </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
